view3d.select enumerate+others = behavior chaos #66006

Closed
opened 2019-06-21 23:07:47 +02:00 by Vyacheslav Kobozev · 3 comments

Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: d30f72dfd8

Short description of error
Checkboxes for variations of selection work unexpected:

  1. enumerate + extend — do not extend selection, but switch it
  2. enumerate+toggle — do not toggle selection, do not deselect, but toggle active object
  3. enumerate + deselect — is selecting object

I am trying to make proper selection keymap, where I can deselect free and by list or toggle by list. Now it is impossible.
Here the video:
2019-06-21_23-42-47.mp4

How it should be IMHO:
Toggle = toggle only selection
Toggle + extend = toggle active/unactive for selected object.
Toggle + deselect = make selected object unactive. For unselected do nothing
Toggle + enumerate = toggle selection of selected from list
Enumerate + extend = add to selection object, that picked from list
Enumerate + deselect = exclude from selection object, that picked from list

Feel free to call me for discussion, if I miss combination or something else.

Exact steps for others to reproduce the error
try to combine enumerate option with others by yourself
Here the file, I used:
enumerate selection chaos.blend

Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Broken**: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: `d30f72dfd8` **Short description of error** Checkboxes for variations of selection work unexpected: 1. enumerate + extend — do not extend selection, but switch it 2. enumerate+toggle — do not toggle selection, do not deselect, but toggle active object 3. enumerate + deselect — is selecting object I am trying to make proper selection keymap, where I can deselect free and by list or toggle by list. Now it is impossible. Here the video: [2019-06-21_23-42-47.mp4](https://archive.blender.org/developer/F7442803/2019-06-21_23-42-47.mp4) **How it should be IMHO:** Toggle = *toggle only selection* Toggle + extend = *toggle active/unactive for selected object.* Toggle + deselect = *make selected object unactive. For unselected do nothing* Toggle + enumerate = *toggle selection of selected from list* Enumerate + extend = *add to selection object, that picked from list* Enumerate + deselect = *exclude from selection object, that picked from list* Feel free to call me for discussion, if I miss combination or something else. **Exact steps for others to reproduce the error** try to combine enumerate option with others by yourself Here the file, I used: [enumerate selection chaos.blend](https://archive.blender.org/developer/F7443164/enumerate_selection_chaos.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Campbell Barton was assigned by Sebastian Parborg 2019-06-24 11:29:07 +02:00

This issue was referenced by 5cb3d9df1e

This issue was referenced by 5cb3d9df1e020dab81afe9df2ab79cae55ab3e65

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66006
No description provided.