Fix T66006: View 3D select enumerate + other options fail

Support other options when using the enumerate option.